objects/Tools.txt
sources/Ninja.cpp:77:43: error: non-const lvalue reference to type 'Point' cannot bind to a temporary of type 'Point'
        Point moveTo = Point::moveTowards(this->getPLocation(), enemy->getPLocation(), this->getSpeed());
                                          ^~~~~~~~~~~~~~~~~~~~
sources/Point.hpp:33:41: note: passing argument to parameter 'sourceP' here
        static Point moveTowards(Point &sourceP, Point &destP, double distance);
